# PersonalFinanceExplorer

./: .credentials-example.json  .gitignore  CHANGELOG-raw.md  README.md  dodo.py  main.py  pyproject.toml  requirements.txt
pfe/: pfe.py  plaidWrapper.py  profile.py  utils.py
