[tool.isort]
line_length = 120
length_sort = false
default_section = "THIRDPARTY"

[tool.poetry]
name = "pfe"
version = "0.0.0"
description = "Personal Finances Explorer"
authors = ["Kyle King <KyleKing@users.noreply.github.com>"]
repository = "https://github.com/KyleKing/PersonalFinanceExplorer"

[tool.poetry.dependencies]
python = "^3.7"
dash_charts = {git = "https://github.com/KyleKing/dash_charts.git", branch = "master"}
plaid-python = "^3.3"
plaidash = "^1.0"
plotly_express = "^0.3.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
doit = "^0.31"
flake8 = "^3.7"
flake8-blind-except = "^0.1"
flake8-bugbear = "^19.3"
flake8-builtins = "^1.4"
flake8-commas = "^2.0"
flake8-deprecated = "^1.3"
flake8-isort = "^2.7"
flake8-logging-format = "^0.6"
flake8-mock = "^0.3"
flake8-print = "^3.1"
flake8-quotes = "^2.0"
flake8-tuple = "^0.4"
gitchangelog = "^3.0"
isort = "^4.3"
pdoc3 = "^0.6"
pep8-naming = "^0.8"
pytest = "^4.6"
pytest-cov = "^2.7"
radon = "^3.0"
toml = "^0.10"
tqdm = "^4.32"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
