[tool.poetry]
name = "pfe"
version = "0.0.0"
description = "Personal Finances Explorer"
authors = ["Kyle King <https://github.com/KyleKing>"]
repository = "https://github.com/KyleKing/PersonalFinanceExplorer"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7, !=3.8"
apsw-wheels = "*"
dash_charts = {git = "https://github.com/KyleKing/dash_charts.git", branch = "master"}
plaid-python = "*"
plaidash = "*"

[tool.poetry.dev-dependencies]
dash = {extras = ["testing"], version = "*, ^1.11"}
dash_dev = {git = "https://github.com/KyleKing/dash_dev.git"}

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
